== 0.6.2 (in git)

== 0.6.1 2011-01-27

 === New Features
  * Default strategies for all ORM libs are defined. (GH-36, GH-38 Prem Sichanugrist)
  * Add a NullStrategy. (GH-6 Ben Mabey)

 === Bugfixes
  * Mongo colletion indexes are dropped for collections being removed. (GH-41 Ben Mabey)
  * Exclude database views from tables_to_truncate, if the connection adapter
    supports reading from the ANSI standard information_schema views. (GH-25 Samer Abukhait)
  * ORM types can be specified in string format and not mysteriously blowup. (GH-26 Ben Mabey)
  * Do not remove MongoDB reserved system collections. (GH-24 Ches Martin)

== 0.6.0 2010-10-25 - The Multi-ORM/Connection Release

This release has the often asked for functionality of being able to clean
multiple databases within the same project.  This involves being able to 
clean databases managed by the same ORM (i.e. different connections) and
also being able to clean databases managed by distinct ORMs.  So, for
example you can now use DatabaseCleaner on a project that has ActiveRecord
and Mongoid to help ensure all DBs all in a clean state.  Please see the
README for more information.  The old API has been preserved so this release
is backwards compatible.

This release is a result of Jon Rowe's hard work. Many thanks to Jon for all
of the hours and effort he put into making this feature request a reality.

 === New Features
  * Ability to clean multiple database connections managed by the same ORM. (Jon Rowe)
  * Ability to clean multiple DBs managed by different ORMs in same project. (Jon Rowe)
  * Allows for the ActiveRecord config file (database.yml) to contain ERB and process it. (Fletcher Nichol)
  * Mysql2Adapter support. (Kamal Fariz Mahyuddin and John Ferlito)
  * Deletion strategy for ActiveRecord (Mikl Kurkov)

 === Bugfixes
  * Updates the DataMapper truncation strategy to version 0.10.3. (Robert Rouse)