@@ -1,5 +1,8 @@
 == 0.6.2 (in git)
 
+ === Bugfixes
+  * Reversed GH-41 after larger community discussion. Mongo indexes are no longer dropped. (Ben Mabey)
+
 == 0.6.1 2011-01-27
 
  === New Features
